; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_physical_planner.c_UniqueJobId.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_physical_planner.c_UniqueJobId.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UniqueJobId.jobIdCounter = internal global i32 0, align 4
@EnableUniqueJobIds = common dso_local global i64 0, align 8
@MyProcPid = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @UniqueJobId() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  store i32 0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  %5 = load i32, i32* @UniqueJobId.jobIdCounter, align 4
  %6 = add nsw i32 %5, 1
  store i32 %6, i32* @UniqueJobId.jobIdCounter, align 4
  %7 = load i64, i64* @EnableUniqueJobIds, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %28

9:                                                ; preds = %0
  %10 = call i32 (...) @GetLocalGroupId()
  %11 = and i32 %10, 255
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %1, align 4
  %13 = load i32, i32* %4, align 4
  %14 = shl i32 %13, 48
  %15 = or i32 %12, %14
  store i32 %15, i32* %1, align 4
  %16 = load i32, i32* @MyProcPid, align 4
  %17 = and i32 %16, 16777215
  store i32 %17, i32* %3, align 4
  %18 = load i32, i32* %1, align 4
  %19 = load i32, i32* %3, align 4
  %20 = shl i32 %19, 24
  %21 = or i32 %18, %20
  store i32 %21, i32* %1, align 4
  %22 = call i64 (...) @RecoveryInProgress()
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %9
  %25 = load i32, i32* %1, align 4
  %26 = or i32 %25, 8388608
  store i32 %26, i32* %1, align 4
  br label %27

27:                                               ; preds = %24, %9
  br label %28

28:                                               ; preds = %27, %0
  %29 = load i32, i32* @UniqueJobId.jobIdCounter, align 4
  %30 = and i32 %29, 33554431
  store i32 %30, i32* %2, align 4
  %31 = load i32, i32* %1, align 4
  %32 = load i32, i32* %2, align 4
  %33 = or i32 %31, %32
  store i32 %33, i32* %1, align 4
  %34 = load i32, i32* %1, align 4
  ret i32 %34
}

declare dso_local i32 @GetLocalGroupId(...) #1

declare dso_local i64 @RecoveryInProgress(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
